# supabase-llm-docs

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
config/: categories.yaml  sdks.yaml
docs/: architecture.md
src/supabase_llm_docs/: __init__.py  __main__.py  cli.py
src/supabase_llm_docs/config/: __init__.py  loader.py  schemas.py
src/supabase_llm_docs/core/: __init__.py  formatter.py  models.py  parser.py
src/supabase_llm_docs/utils/: __init__.py  fetcher.py  logger.py
tests/: __init__.py  conftest.py  test_parser.py
